# FOReportingv2

./: .cursorrules  .dockerignore  .env.backup  .env.backup_20250904_181258  .env.docker  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AUDIT_AND_ROADMAP.md  DEPLOYMENT.md  Dockerfile  FILE_WATCHER_DISPLAY_FIXED.md  FILE_WATCHER_INTEGRATION_COMPLETE.md  GITHUB_PUSH_COMMANDS.md  GITHUB_SETUP.md  HONEST_ASSESSMENT_ACTUAL.md  HONEST_PROJECT_ASSESSMENT.md  IMMEDIATE_ACTION_PLAN.md  LOCAL_SETUP_COMPLETE.md  MANUAL_VERIFICATION_STEPS.md  PE_COMPLETE_IMPLEMENTATION_ROADMAP.md  PE_IMPLEMENTATION_PLAN.md  PE_QUICK_START_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_GAP_ANALYSIS.md  PROJECT_STATUS_SUMMARY.md  README.md  ROADMAP_TO_REAL_COMPLETION.md  SECURITY.md  alembic.ini  check_extracted_data.py  check_openai_simple.py  check_openai_vector_store.py  check_paths.py  check_processed_documents.py  check_system.py  check_vector_store_after_processing.py  docker-compose.prod.yml  docker-compose.yml  (+42 more)
.github/workflows/: ci.yml  dev.yml  release.yml
alembic/: env.py  fx_and_shareclass.sql  pe_nav_observation_migration.sql
alembic/versions/: add_document_tracker.py  add_embedding_columns.py  add_extracted_records.py  add_reconciliation_log_table.py  e01e58ef9cbe_pe_core_schema.py  pe_enhanced_schema.py
app/: __init__.py  config.py  exceptions.py  main.py  security.py  validators.py
app/database/: __init__.py  connection.py  document_tracker.py  file_storage.py  models.py
app/frontend/: __init__.py  api_client.py  (+3 more)
competitors/: API Endpoints.xltx  Account Statement Extract (Canoe Example).xlsx  Canoe Asset Data Export - 20250704 105114 (2).xlsx  PitchBook_Fund_Returns_Data_2024_06_11_10_15_27.xlsx  PitchBook_Fund_Returns_Data_2024_06_11_10_20_48.xlsx  PitchBook_Funds_2024_06_11_08_15_13.xlsx  PitchBook_Funds_2024_06_11_08_20_40.xlsx  PitchBook_Portfolio_Forecast_BWI_2025_Sep_04_10_56_32.xlsx
config/: runtime.yaml
docs/: ACCEPTANCE.md  AI_RULES.md  CONFIG.md  ERROR_HANDLING.md  IMPLEMENTATION_GUIDE.md  SECURITY_AUDIT.md  TIME_SERIES.md
scripts/: health_check.py  init_db.py  run_system.py  seed_field_library.py  test_processing.py
tests/: conftest.py
(+118 files in other folders)
